# skill-desktop

./: .gitignore  LICENSE  README.md  README_ZH.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: 01-PRD.md  02-TECH-SPEC.md  03-UI-DESIGN.md  04-LOCAL-IMPORT-DESIGN.md  05-PRODUCT-REVIEW-AND-PLAN.md
scripts/: release.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/scanner/: local_import.rs  mod.rs  risk_analyzer.rs  watcher.rs
src-tauri/src/space/: mod.rs
src-tauri/src/types/: mod.rs
src/components/: CommandPalette.tsx  QuickInstallSheet.tsx  ShortcutsHelp.tsx
src/components/editor/: FileEditorDialog.tsx
src/components/hub/: DiscoverPanel.tsx  GitHubImportPanel.tsx  LocalImportPanel.tsx  McpImportPanel.tsx  SkillPreviewPanel.tsx  (+5 more)
src/constants/: index.ts  queryKeys.ts
src/hooks/: index.ts  useAITools.ts  useAppSettings.ts  useFileOperations.ts  useImport.ts  useInstall.ts  useLLM.ts  useLibrary.ts  useLocalImport.ts  useMcp.ts  useQuarantine.ts  useSandbox.ts  useSkillCreation.ts  useSkills.ts  useSpaces.ts  useTauri.ts
src/i18n/: index.ts
src/stores/: appStore.ts  index.ts  settingsStore.ts
src/types/: aitools.ts  cli.ts  index.ts  llm.ts  skill.ts  space.ts
src/views/: AIToolsView.tsx  HomeView.tsx  HubView.tsx  LibraryView.tsx  SandboxView.tsx  SettingsView.tsx  SpacesView.tsx  index.ts
(+52 files in other folders)
